fix(radiopanel): shift font size for new token
affects: @entur/form

--- a/packages/form/src/RadioPanel.scss
+++ b/packages/form/src/RadioPanel.scss
@@ -102,7 +102,7 @@
       height: 2rem;
     }
     .eds-radio-panel__title {
-      font-size: $font-sizes-extra-large;
+      font-size: $font-sizes-extra-large2;
       font-weight: $font-weights-heading;
     }
   }
